Remove endorsed mechanism for Java 11